--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
   <title>テストhtml</title>
 </head>
 <body>
-  <h1>こんにちは！</h1>
+  <h1>Azure Static Web Apps</h1>
   <button onclick="callAzureFunction()">Click Me</button>
 </body>
