--- a/index.html
+++ b/index.html
@@ -6,4 +6,5 @@
 <body>
   <h1>Azure Static Web Apps</h1>
   <button onclick="callAzureFunction()">Click Me</button>
+  <div id="result"></div>
 </body>
